<resources>
    <string name="app_name">eCampus</string>
    <string name="login">Autenticación</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="remember">Recuerdame la próxima vez</string>
    <string name="entry">Entrar</string>
    <string name="title_activity_login_activity_2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Autentificación</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">El formato del email no és correcto</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Credenciales inválidas</string>
    <string name="error_field_required">Este campo no debería estar vacio</string>

    <string name="basic_information_title">INFORMACIÓN BÁSICA</string>
    <string name="themes_title">TEMARIO</string>
    <string name="students_title">ALUMNOS INSCRITOS</string>
    <string name="subejct_title">ASIGNATURAS</string>
    <string name="add_student_form_name_hint">Nombre del alumno</string>
    <string name="add_student_form_birthdate_hint">Fecha de nacimiento</string>
    <string name="add_student_form_carrer_placeholder">Seleciona la titulación</string>
    <string name="add_student_form_gender_title">Sexo</string>
    <string name="add_student_form_photo_title">Foto</string>
    <string name="add_student_form_submit_button">CREA</string>
    <string name="add_student_form_male_option_label">Masculino</string>
    <string name="add_student_form_female_option_label">Femenino</string>

    <string name="exit">Salir</string>
    <string name="exams">Examenes</string>
    <string name="subject_management">Gestionar asignaturas</string>
    <string name="student_management">Gestionar alumnado</string>
    <string name="subject_management_title">Gestión asignaturas</string>
    <string name="choose_subject">Selecciona una asignatura:</string>
    <string name="student_management_title">Gestión alumnos</string>
    <string name="choose_student">Selecciona un alumno:</string>

    <string name="student_name">Nombre: </string>
    <string name="student_age">Edad: </string>
    <string name="student_speciality">Especialidad: </string>
    <string name="exams_list_title">Listado examenes</string>
    <string name="exam_editor_title">Editor examen</string>
    <string name="exam_new_title">Nuevo examen</string>
    <string name="prompt_student_name">Nombre alumno</string>
    <string name="prompt_born_date">Fecha de nacimiento</string>
    <string name="career">Carrera</string>
    <string name="save">Guardar</string>
    <string name="subject">Asignatura</string>
    <string name="class_spinner">Aula</string>


    <string name="intro_subject_theme">Introduce el temario de la asignatura:</string>
    <string name="registered_students_title">Selecciona los alumnos inscritos:</string>
    <string name="add_theme_field_hint">Nombre del tema</string>
    <string name="title_activity_login">Autentificación</string>
    <string name="alert_delete_title">Estas seguro de lo que estas haciendo?</string>
    <string name="alert_delete_msg_subject">Para eliminar la asignatura de manera definitiva presiona \"Si\" en caso contrario apreta \"No\" o fuera del dialogo para cancelar la acción.</string>
    <string name="alert_delete_msg_student">Para eliminar al alumno de manera definitiva presiona \"Si\" en caso contrario apreta \"No\" o fuera del dialogo para cancelar la acción.</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="no_themes_for_subject">Esta asignatura no tiene ningún tema</string>
    <string name="no_students_for_subject">No hay ningún alumno inscrito a esta asignatura</string>

    <string name="years"> años</string>


    <string name="add_student_title"> Nuevo alumno</string>
    <string name="view_student_title"> Visualizar alumno</string>
    <string name="add_subject_title"> Nueva asignatura</string>
    <string name="view_subject_title"> Visualizar asignatura</string>
    <string name="subject_name">Nombre de la asignatura</string>
    <string name="subject_description">Descripción de la asignatura</string>
    <string name="subject_create_success">La asignatura se ha creado satisfactóriamente</string>
    <string name="error_theme_required">La asignatura debe tener almenos un  tema</string>
    <string name="theme_numeration">%d.</string>
    <string name="student_date">  %3$s\n/%2$s\n/%1$s </string>
    <string name="student_add_date">  %1$s\n-%2$s\n-%3$s </string>
    <string name="prompt_exam_date">  Fecha del examen </string>
    <string name="prompt_exam_hour">  Hora del examen </string>
    <string name="exam_date">  %3$s\n/%2$s\n/%1$s </string>



    <string name="add_degree"> Carrera </string>
    <string name="pick_image_intent_text">Seleciona un método</string>
    <string name="error_must_select_carreer">Selecciona una titulación</string>

    <string name="assigned_class"> Aula </string>
    <string name="students"> Alumnos </string>
    <string name="time_picker_result_value">%1$s:%2$s</string>
    <string name="logout"> Logout </string>

    <string name="page_number"> Nueva asignatura </string>
    <string name="page_number_aux"> /3 </string>
    <string name="student_create_success">El alumno se ha creado satisfactóriamente</string>
    <string name="submit_add_subject_title">Finalizar registro</string>
    <string name="submit_add_subject">Para registrar la asignatura de manera definitiva presiona \"Si\" en caso contrario apreta \"No\" o fuera del dialogo para cancelar la acción. </string>


    <string name="action_settings"> Settings </string>
    <string name="no_subjects"> Para crear un examen primero crea una asignatura </string>
    <string name="no_subjects_selected"> Selecciona una asignatura</string>
    <string name="exam_created"> Examen creado satisfactóriamente</string>
    <string name="degree_without_subjects"> No hay asignaturas</string>
    <string name="error_past_time">La fecha debe ser una fecha futura</string>
    <string name="error_future_date">La fecha no puede ser una fecha futura</string>



</resources>
