<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        app:showAsAction="always"
        android:title="@string/action_settings">
        <menu>

            <item android:id="@+id/add_student"
                android:icon="@drawable/student"
                android:title="@string/add_student_title"
                android:orderInCategory="100"
                app:showAsAction="always"
                />

            <item android:id="@+id/add_subject"
                android:icon="@drawable/subject"
                android:title="@string/add_subject_title"
                android:orderInCategory="100"
                app:showAsAction="always"/>

            <item android:id="@+id/add_exam"
                android:icon="@drawable/exam"
                android:title="@string/exam_new_title"
                android:orderInCategory="100"
                app:showAsAction="always"/>

            <item android:id="@+id/exit"
                android:icon="@drawable/exit"
                android:title="@string/exit"
                android:orderInCategory="100"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>