<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/form_add_student"
        tools:context="domel.ecampus.Activity.AddStudentActivity">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:paddingRight="24dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/back_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/back_toolbar"
                    android:layout_gravity="left" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    android:layout_gravity="left" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="@dimen/title_toolbar"
                        android:layout_weight="2"
                        android:layout_gravity="left" />
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/subtitle_toolbar"
                        android:text="@string/add_student_title"
                        android:layout_weight="1"
                        android:layout_gravity="left" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/simple_padding"
                android:id="@+id/view"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/add_student_form_name_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="flagNoExtractUi"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/simple_padding"
                android:id="@+id/view2"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/birthdate"
                    android:hint="@string/add_student_form_birthdate_hint"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/double_margin"
                    android:imeOptions="flagNoExtractUi"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_degree"
                android:id="@+id/spinner_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/student_degree"
                android:prompt="@string/add_student_form_carrer_placeholder"
                android:layout_marginBottom="@dimen/double_margin"
                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_student_form_gender_title"
                android:id="@+id/textView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender_radiogroup"
                android:padding="@dimen/simple_padding">

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_student_form_male_option_label"
                    android:id="@+id/male_radio" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_student_form_female_option_label"
                    android:checked="true"
                    android:id="@+id/female_radio" />

            </RadioGroup>

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="@dimen/double_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_student_form_photo_title"
                android:id="@+id/photo_title" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_marginBottom="@dimen/simple_padding">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:id="@+id/photo"
                    android:layout_weight="1.5"
                    android:scaleType="fitCenter"/>

                <android.support.v7.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/add_photo"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:id="@+id/photo_button"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimaryLighten"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button"
                android:layout_gravity="end"
                android:text="@string/add_student_form_submit_button"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>