<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ExamEditorActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:paddingRight="24dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/back_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/back_toolbar"
                    android:layout_gravity="left"
                    android:foregroundGravity="left"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    android:layout_gravity="left" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:layout_marginBottom="3dp">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="25sp"
                        android:layout_gravity="left"
                        android:layout_weight="2"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/editor_or_new"
                        android:layout_marginLeft="10dp"
                        android:textStyle="normal"
                        android:textSize="@dimen/subtitle_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"/>
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/simple_padding"
            android:weightSum="6">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/exam_date"
                    android:layout_marginTop="@dimen/simple_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_exam_date"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/double_margin" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/exam_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_exam_hour"
                    android:imeActionLabel="@string/prompt_exam_hour"
                    android:imeOptions="flagNoExtractUi"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/career"/>
            <Spinner
                android:layout_weight="1"
                android:id="@+id/career_spinner"
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/subject"/>
            <Spinner
                android:layout_weight="1"
                android:id="@+id/subject_spinner"
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/class_spinner"/>
            <Spinner

                android:layout_weight="1"
                android:id="@+id/class_spinner"
                android:layout_marginTop="@dimen/simple_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/simple_padding"
                android:background="@color/colorPrimaryLighten" />

            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:layout_gravity="end"
                android:text="@string/save"/>
        </LinearLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
