<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLighten5"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:weightSum="10">

        <!-- page title -->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_marginTop="@dimen/simple_padding"
            android:orientation="vertical"
            android:padding="20dp" >

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/simple_padding"
                android:src="@drawable/logo_black"/>

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="34sp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <!-- email & password -->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="4"
            android:padding="@dimen/double_margin"
            android:layout_gravity="center|center_vertical|center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="@dimen/double_margin"
                    android:imeOptions="actionNext"/>


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:imeActionId="@+id/login"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.LinearLayoutCompat>
        <!-- check box-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:layout_weight="2">

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:id="@+id/remember"
                android:textSize="20sp"
                android:layout_weight="2"/>

        </android.support.v7.widget.LinearLayoutCompat>
        <!-- entry button-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:layout_weight="2">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:text="@string/entry"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>